# GetHiredAlly

./: .gitignore  .replit  AGENTS.md  backup.sh  cv_parser_wrapper.py  index.js  package-lock.json  package.json  pyproject.toml  recover.sh  replit.md  supabase_schema.sql  xray_documentation_temp.md
Scripts/: backupgit.sh
Temp/: calibration_diagnostic.py  calibration_test.py
attached_assets/: Pasted--ARCHITECTUR-1767615636832_1767615636833.txt  Pasted--ActionBar-Styling-Fix-Replit-Prompt-Project-GetHiredAl_1767095812061.txt  Pasted--BACKEND-FIX-2-Fix-Section-Boundary-Detection-Target-Re_1767688791944.txt  Pasted--BEFORE-line-985-htmlContent-fixedCV-reportData-cv-cont_1767760548205.txt  Pasted--COMPREHENSIVE-FIX-All-Detection-Display-Issues--176754_1767542732787.txt  Pasted--COMPREHENSIVE-FIX-Section-Parser-Complete-Overhaul--17_1767539696837.txt  Pasted--COMPREHENSIVE-SYSTEM-INVESTIGATION--1767541947574_1767541947575.txt  Pasted--CREATE-PLEASANT-SCANNER-SOUNDS-WITH-WEB-1767093904577_1767093904577.txt  Pasted--CREATE-REUSABLE-FUNC-1767297141973_1767297141974.txt  Pasted--CREATE-REUSABLE-FUNC-1767298942690_1767298942691.txt  Pasted--CRITICAL-DEBUG--1767529912660_1767529912660.txt  Pasted--CRITICAL-Detection-System-Complete-Audit-Problem-100-o_1767531247156.txt  Pasted--CRITICAL-READ-AND-CONFIRM-BEFORE-ANY-CO-1767032655901_1767032655902.txt  Pasted--CV-Detection-Mechanism-Debug-Investigation-Date-Januar_1767516089558.txt  Pasted--CV-FIXED-PAGE-COMPREHENSIVE-UX-FIXES--1767097055958_1767097055959.txt  Pasted--CV-FIXED-PAGE-FIX-DOWNLOADS-PART-3--1767097349391_1767097349391.txt  Pasted--CV-FIXED-PAGE-FIX-PLACEHOLDERS-PART--1767097253966_1767097253966.txt  Pasted--CV-Issue-Detection-Function-Investigation-Prompt-Docum_1767598660251.txt  Pasted--CV-Optimization-Fix-Updated-Prompt-2-6-Based-on-Diagno_1767102521438.txt  Pasted--CV-Optimizer-Technical-Discovery-Questions-for-Replit-_1767005781250.txt  (+578 more)
(+287 files in other folders)
