[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.127.0",
    "google-generativeai>=0.8.6",
    "litellm>=1.80.11",
    "pydantic[email]>=2.12.5",
    "python-docx>=1.2.0",
    "reportlab>=4.4.7",
    "resend>=2.19.0",
    "supabase>=2.27.0",
    "uvicorn>=0.40.0",
]
